sjengida/g1/extended_in_check
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/extended_in_check/src/moves.c:1713:6: error: use of undeclared identifier 'knight_o_2'
v2 = knight_o_2; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/extended_in_check/src/moves.c:1720:9: error: use of undeclared identifier 'knight_o_3'
while ( knight_o_3 != v2 ); 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/extended_in_check/src/moves.c:1759:6: error: use of undeclared identifier 'knight_o_2'
v1 = knight_o_2; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/extended_in_check/src/moves.c:1766:9: error: use of undeclared identifier 'knight_o_3'
while ( knight_o_3 != v1 ); 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/extended_in_check/src/obj/moves.o] Error 1
